--- a/Features/Content/index.html
+++ b/Features/Content/index.html
@@ -14,6 +14,7 @@
     </head>
     <body>
         <div id="feature-container"></div>
+        <button onclick="graphWidget.groupBy('criterion')">Group</button>
         <script src="/Scripts/main.js"></script>
     </body>
 </html>
