Redeveloped group devider as ellipses orbits devider.

--- a/Features/Content/index.html
+++ b/Features/Content/index.html
@@ -14,7 +14,7 @@
     </head>
     <body>
         <div id="feature-container"></div>
-        <button onclick="graphWidget.groupBy('criterion')">Group</button>
+        <button onclick="graphWidget.group()">Group</button>
         <script src="/Scripts/main.js"></script>
     </body>
 </html>
